<resources>
    <string name="app_name">Post Management</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_comment">Enter comment</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="add_new_post">Add new post</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_body">Enter body</string>
    <string name="retry">Retry</string>
    <string name="delete_my_post">Are you sure you want to delete this post?</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="search_posts_by_title">Search posts by title…</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="my">My</string>
    <string name="user_my">User: My</string>
    <string name="user_id_format">User ID: %d</string>
    <string name="favorite_post">Favorite post</string>


    <string name="error_change_comment">Please change the comment before saving.</string>
    <string name="error_title_empty">Title cannot be empty</string>
    <string name="error_no_changes">No changes detected</string>
    <string name="error_loading_posts">Error loading posts</string>


    <string name="error_server_unavailable">Server Unavailable.</string>
    <string name="error_internet_unavailable">Internet Unavailable.</string>
    <string name="error_no_internet_connection">No internet connection. Please check your connection and try again.</string>
    <string name="error_no_results_found">No results found</string>
    <string name="error_unknown">Unknown Error. Please try again later.</string>


    <string name="notification_welcome_title">Welcome!</string>
    <string name="notification_welcome_text">Thank you for opening the app.</string>

</resources>