<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:background="@drawable/rounded_dialog_background">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/save_dialog_til_title"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        app:boxStrokeColor="@color/text_input_border_selector"
        app:boxBackgroundMode="outline"
        android:layout_marginBottom="@dimen/_12sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/save_dialog_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/text_color"
            android:padding="@dimen/_15sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/save_dialog_til_body"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_body"
        app:boxStrokeColor="@color/text_input_border_selector"
        app:boxBackgroundMode="outline"
        android:layout_marginBottom="@dimen/_12sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/save_dialog_body_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:padding="@dimen/_15sdp"
            android:lines="2"
            android:minLines="2"
            android:maxLines="3"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/save_dialog_til_comment"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_comment"
        app:boxStrokeColor="@color/text_input_border_selector"
        app:boxBackgroundMode="outline"
        android:layout_marginBottom="@dimen/_16sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/save_dialog_comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/text_color"
            android:padding="@dimen/_15sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="@dimen/_16sdp">

        <Button
            android:id="@+id/save_dialog_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_dialog_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>